Added hint with final answer.

--- a/Exercises/Development/SequentialTreeGenTreePRO.html
+++ b/Exercises/Development/SequentialTreeGenTreePRO.html
@@ -116,9 +116,9 @@ function randomNode(bt, value)
       <p class="solution" data-type="text"><var>ANS</var></p>
        <div class="hints">
   <p>Make sure to use a ')' for the end of every sub tree</p>
-  <p>The root also needs to end</p>
   <p>There should the same amout of ')' as there are nodes.
   </p>
+  <p>Answer: <var>ANS</var></p>
       </div>
     </div>
          
