Clean up some sorting proficiency exercises. Update exercises to define height/width in body tag, and remove most XML files.

--- a/Exercises/List/alistInsertPRO.html
+++ b/Exercises/List/alistInsertPRO.html
@@ -19,7 +19,7 @@ Written by Junyang Chen and Cliff Shaffer
   <link rel="stylesheet" href="alistPRO.css" type="text/css" />
 </head>
 
-<body>
+<body data-height="700" data-width="950">
 <div class="exercise">
   <div class="vars">
     <var id="arr_size">randRange(4, 6)</var>
