--- a/Exercises/List/aqueueEnqueuePRO.html
+++ b/Exercises/List/aqueueEnqueuePRO.html
@@ -38,8 +38,8 @@ Written by Junyang Chen and Cliff Shaffer
     }
   </style>
 </head>
-<body>
 
+<body data-height="700" data-width="950">
 <script>
 //"use strict";
 // JSAV extension for circular queue.
