--- a/Exercises/List/lqueueDequeuePRO.html
+++ b/Exercises/List/lqueueDequeuePRO.html
@@ -62,7 +62,8 @@ Written by Junyang Chen and Cliff Shaffer
     #reset { margin-right: 20px;}
   </style>
 </head>
-<body>
+
+<body data-height="550" data-width="950">
 <script>
 var jsav,               // The JSAV object
   leftMargin,           //
