--- a/Exercises/List/lstackPushPRO.html
+++ b/Exercises/List/lstackPushPRO.html
@@ -53,7 +53,8 @@ Written by Junyang Chen and Cliff Shaffer
     #reset { margin-right: 20px;}
   </style>
 </head>
-<body>
+
+<body data-height="750" data-width="950">
 <script>
 var jsav,               // The JSAV object
   answerArr = [],       // The (internal) array that stores the correct answer
