--- a/Exercises/Sorting/QuicksortPartitPRO.html
+++ b/Exercises/Sorting/QuicksortPartitPRO.html
@@ -18,7 +18,7 @@ Written by Gayathri Subramanian, Dan Breakiron, and Cliff Shaffer
   <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
 <head>
 
-<body>
+<body data-height="540" data-width="950">
 <script>
 var jsav,     // The JSAV object
   answerArr,  // The (internal) array that will store the correct answer
