--- a/Exercises/Development/llistInsertPRO.html
+++ b/Exercises/Development/llistInsertPRO.html
@@ -46,7 +46,8 @@ Written by Junyang Chen and Cliff Shaffer
     #reset { margin-right: 20px;}
   </style>
 </head>
-<body>
+
+<body data-height="845" data-width="950">
 <script>
   var jsav,                // The JSAV object
     answerArr = [],        // The (internal) array that stores the correct answer
