--- a/Exercises/Development/llistRemovePRO.html
+++ b/Exercises/Development/llistRemovePRO.html
@@ -59,7 +59,8 @@ Written by Junyang Chen and Cliff Shaffer
     }
   </style>
 </head>
-<body>
+
+<body data-height="810" data-width="950">
 <script>
   var jsav,               // The JSAV object
     answerArr = [],       // The (internal) array that stores the correct answer
