--- a/Exercises/List/aqueueDequeuePRO.html
+++ b/Exercises/List/aqueueDequeuePRO.html
@@ -36,7 +36,8 @@ Written by Junyang Chen and Cliff Shaffer
     }
   </style>
 </head>
-<body>
+
+<body data-height="700" data-width="950">
 <script>
 // JSAV extension for circular queue.
 (function($){
