--- a/Exercises/List/astackPopPRO.html
+++ b/Exercises/List/astackPopPRO.html
@@ -19,7 +19,7 @@ Written by Junyang Chen and Cliff Shaffer
   <link rel="stylesheet" href="astackPRO.css" type="text/css" />
 </head>
 
-<body>
+<body data-height="700" data-width="950">
 <div class="exercise">
   <div class="vars">
     <var id="max_size">randRange(6, 8)</var>
