--- a/Exercises/RecurTutor/rectMCQfwder14.html
+++ b/Exercises/RecurTutor/rectMCQfwder14.html
@@ -25,12 +25,12 @@
 	When will method stringRecur terminates without error?
       </p>
 
-      <div class="solution"><var>"Only when the length of the input string is less than 15"</var></div>
+      <div class="solution"> <var>"For no string inputs. It calls itself no matter what the length of s. It will run until the computer runs out of memory."</var></div>
       <ul class="choices" >
 	<li><var> "Only when the length of the input string is greater than or equal to 15" </var></li>	  	 
-	<li><var><"Only when an empty string is input"</var></li>
+	<li><var>"Only when an empty string is input"</var></li>
         <li><var>"For all string inputs"</var></li>
-        <li><var>"For no string inputs"</var></li>
+        <li><var>"Only when the length of the input string is less than 15"</var></li>
       </ul>
       <div class="hints">
       <p>Think about the range of the unhandeled cases by the exisiting if statement.</p>
