Code Completion modifications

--- a/Exercises/RecurTutor/recwbcrc3PROG.html
+++ b/Exercises/RecurTutor/recwbcrc3PROG.html
@@ -78,7 +78,8 @@ $(document).ready(function() {
 
   <div class="problems">
     <div> <!-- Supresses answer box -->
-     <p class="problem" id = "test"> Given the following recursive function write down the missing base case condition and recursive call such that this function computes logb n.
+     <p class="problem" id = "test"> Given the following recursive function write down the missing base case condition and recursive call such that this function computes log n to the base b.
+     Hint: as an example to clarify the idea: log 8 to the base 2 equals 3. Since 8 = 2*2*2 so we keep dividing 8 by 2 till we get 1 and we count the number of divisions we made.
   <br />
     </h4>
 
