--- a/Exercises/RecurTutor/rechw2bc15PROG.html
+++ b/Exercises/RecurTutor/rechw2bc15PROG.html
@@ -26,12 +26,15 @@
 
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test"> Given the following recursive function write down the base case conditions such that this function determines if an integer X is prime or not. Where X is the number and Y is the divisor which is equals to X-1.
-	  
+      <p class="problem" id = "test"> Given the following recursive function write down the base case conditions such that this function determines if an integer X is prime or not. 
+      Where x is the number to check whether it is prime or not. y is a divisor which is a number below x, when calling the function initially y equals x-1.
+      A prime number is divisible evenly only by itself and 1. The recursive function takes a num and a divisor. 
+      We check to see if the number is prime by dividing it by the divisor. If it evenly divides then the number is not prime, and we return false. 
+      If the number does not evenly divide then we reduce the divisor by 1 and recurse a level deeper.	  
     <br />
     </h4>
 
-    <textarea  id="codeTextarea">boolean Prime(int X,int Y)
+    <textarea  id="codeTextarea"> boolean Prime(int X,int Y)
 {
   //<<Missing base case condition 1>>
     return true;
