Exercise height adjusted

--- a/Exercises/RecurTutor/rechw2bc15PROG.html
+++ b/Exercises/RecurTutor/rechw2bc15PROG.html
@@ -16,12 +16,12 @@
   <link rel= "stylesheet" href="../../lib/ExAreaPROG.css" type="text/css">
 
   <style>
-   #problemarea { height: 850px;}
+   #problemarea { height: 600px;}
   </style>
 </head>
 
 
-<body  data-height="850" data-width="1000">
+<body  data-height="600" data-width="1000">
 <div class="exercise">
   <div class="vars">
     <var id="listel1">randRange(0, 99)</var>
@@ -33,8 +33,8 @@
   <div class="problems">
     <div> <!-- Supresses answer box -->
       <p class="problem" id = "test"> Given the following recursive function write down the base case conditions such that this function determines if an integer X is prime or not. 
-      Where x is the number to check whether it is prime or not. y is a divisor which is a number below x, when calling the function initially y equals x-1.
-      A prime number is divisible evenly only by itself and 1. The recursive function takes a num and a divisor. 
+      Where X is the number to check whether it is prime or not. Y is a divisor which is a number below X, when calling the function initially Y equals X-1.
+      A prime number is divisible evenly only by itself and 1. The recursive function takes a number and a divisor. 
       We check to see if the number is prime by dividing it by the divisor. If it evenly divides then the number is not prime, and we return false. 
       If the number does not evenly divide then we reduce the divisor by 1 and recurse a level deeper.	  
     <br />
