--- a/Exercises/RecurTutor/rechwrcra16PROG.html
+++ b/Exercises/RecurTutor/rechwrcra16PROG.html
@@ -10,13 +10,18 @@
     window.OpenPopKa = true;
   </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../lib/odsaStyle-min.css"></script>
-  <script src="../../lib/ExAreaPROG.js"> </script>
-  <link rel= "stylesheet" href="../../lib/ExAreaPROG.css" type="text/css"> 
+    <script src="../../lib/odsaStyle-min.css"></script>
+ 
+ 
+  <script src="../../lib/codemirror/lib/codemirror.js"></script>
+  <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
+  <script src="../../lib/codemirror/mode/clike/clike.js"></script>
+
+
  
 </head>
 
-<body  data-height="550" data-width="950">
+<body  data-height="650" data-width="950">
    
 <div class="exercise">
   <div class="vars">
@@ -31,6 +36,14 @@
       <p class="problem" id = "test"> Given the following recursive function write down the missing code at the else such that this function returns the binary equivalent of an integer N in a String spaces seprated. Example: the binary equivalent of 13 may be found by repeatedly dividing 13 by 2.So, 13 in base 2 is 1 1 0 1.  
     <br />
     </h4>
+    <p></p>
+      <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    mode:  "text/x-java"
+  });
+  
+  </script>
     <textarea  id="codeTextarea">String decibinary (int num)
 {
  if ( num < 2)
