--- a/Exercises/RecurTutor/rechw2bc18PROG.html
+++ b/Exercises/RecurTutor/rechw2bc18PROG.html
@@ -11,10 +11,14 @@
   </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../lib/odsaStyle-min.css"></script>
-  <script src="../../lib/ExAreaPROG.js"> </script>
-  <link rel= "stylesheet" href="../../lib/ExAreaPROG.css" type="text/css"> 
+ 
+  <script src="../../lib/codemirror/lib/codemirror.js"></script>
+  <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
+  <script src="../../lib/codemirror/mode/clike/clike.js"></script>
+ 
+
 </head>
-<body  data-height="550" data-width="950">
+<body  data-height="650" data-width="950">
    
 
 <div class="exercise">
@@ -30,6 +34,14 @@
       <p class="problem" id = "test">  Given the following recursive function write down the missing two conditions such that this function ,given two Strings, returns true if the two strings have the same sequence of characters but in the opposite order (ignoring white space and capitalization), and returns false otherwise. 
     <br />
     </h4>
+    <p></p>
+     <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    mode:  "text/x-java"
+  });
+  
+  </script>
     <textarea  id="codeTextarea">boolean isReverse(String s1, String s2) {  
  if //<<Missing condition 1>>  
    return true;
