--- a/Exercises/RecurTutor/rechwrc14PROG.html
+++ b/Exercises/RecurTutor/rechwrc14PROG.html
@@ -11,11 +11,14 @@
   </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../lib/odsaStyle-min.css"></script>
-  <script src="../../lib/ExAreaPROG.js"> </script>
-  <link rel= "stylesheet" href="../../lib/ExAreaPROG.css" type="text/css">
  
+ 
+  <script src="../../lib/codemirror/lib/codemirror.js"></script>
+  <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
+  <script src="../../lib/codemirror/mode/clike/clike.js"></script>
+  
 </head>
-<body  data-height="550" data-width="950">
+<body  data-height="600" data-width="950">
    
 <div class="exercise">
   <div class="vars">
@@ -31,7 +34,14 @@
 	 
     <br />
     </h4>
-
+    <p></p>
+  <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    mode:  "text/x-java"
+  });
+  
+  </script>
     <textarea  id="codeTextarea">long Fibonacci(int n) 
 {
   if (n > 2)
@@ -40,6 +50,8 @@
     return 1;    
 }
 </textarea></p>
+
+
 
       <div class="question">
 	
@@ -56,6 +68,6 @@
     </div>
   </div>
 </div>
- 
+
 </body>
 </html>
