--- a/Exercises/RecurTutor/recw19PROG.html
+++ b/Exercises/RecurTutor/recw19PROG.html
@@ -11,14 +11,18 @@
   </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../lib/odsaStyle-min.css"></script>
-   <script src="../../lib/ExAreaPROG.js"> </script>
-   <link rel= "stylesheet" href="../../lib/ExAreaPROG.css" type="text/css">
+
+  <script src="../../lib/codemirror/lib/codemirror.js"></script>
+  <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
+  <script src="../../lib/codemirror/mode/clike/clike.js"></script>
+ 
+
 <style>
-    #problemarea { height: 600px;}
+    #problemarea { height: 500px;}
   </style>
 </head>
 
-<body  data-height="600" data-width="950">
+<body  data-height="650" data-width="950">
    
 
 <div class="exercise">
@@ -35,6 +39,14 @@
 <br />
 
 </h4>
+ <p></p>
+  <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    mode:  "text/x-java"
+  });
+  
+  </script>
 <textarea  id="codeTextarea">void stackReversal(Stack s)
 {
 
