--- a/Exercises/RecurTutor/recw21PROG.html
+++ b/Exercises/RecurTutor/recw21PROG.html
@@ -11,13 +11,15 @@
   </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../lib/odsaStyle-min.css"></script>
-  <script src="../../lib/ExAreaPROG.js"> </script>
-  <link rel= "stylesheet" href="../../lib/ExAreaPROG.css" type="text/css">
-  <style>
-   #problemarea { height: 650px;}
-  </style>
+ 
+ 
+  <script src="../../lib/codemirror/lib/codemirror.js"></script>
+  <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
+  <script src="../../lib/codemirror/mode/clike/clike.js"></script>
+ 
+ 
 </head>
-<body  data-height="650" data-width="1000">
+<body  data-height="750" data-width="1000">
 <div class="exercise">
   <div class="vars">
     <var id="listel1">randRange(0, 99)</var>
@@ -32,7 +34,14 @@
       <p class="problem" id = "test"> <p align="center"><img src= "../../RST/Images/cannonballs.png" width="100" height="75"></p>
 Spherical objects, such as cannonballs, can be stacked to form a pyramid with one cannonball at the top, sitting on top of a square composed of	four cannonballs, sitting on top of a square composed of nine cannonballs, and so forth. Given the following recursive function signature, write the function code such that it takes as its argument the height of a pyramid	of cannonballs and returns the number of cannonballs it contains based on the height of the stack. <br />
 </h4>
-
+<p></p>
+ <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    mode:  "text/x-java"
+  });
+  
+  </script>
 <textarea  id="codeTextarea">int Cannonball(int height){
 		
 
