--- a/Exercises/RecurTutor/recw26PROG.html
+++ b/Exercises/RecurTutor/recw26PROG.html
@@ -11,11 +11,14 @@
   </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../lib/odsaStyle-min.css"></script>
-  <script src="../../lib/ExAreaPROG.js"> </script>
-  <link rel= "stylesheet" href="../../lib/ExAreaPROG.css" type="text/css">
+ 
+  <script src="../../lib/codemirror/lib/codemirror.js"></script>
+  <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
+  <script src="../../lib/codemirror/mode/clike/clike.js"></script>
+ 
   
 </head>
-<body  data-height="550" data-width="950">
+<body  data-height="600" data-width="950">
   
 
 <div class="exercise">
@@ -31,6 +34,14 @@
       <p class="problem" id = "test"> Given the following recursive function signature, write the function code such that this function counts the number of different ways to reach a	basketball score. Example: For the input 3, the output will be 4, since there are 4 different ways to accumulate 3: 1+1+1, 1+2, 2+1, 3.		
  <br />
 </h4>
+ <p></p>
+  <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    mode:  "text/x-java"
+  });
+  
+  </script>
 
 <textarea  id="codeTextarea">int noOfPath (int n)
 {		
