--- a/Exercises/RecurTutor/recw27PROG.html
+++ b/Exercises/RecurTutor/recw27PROG.html
@@ -10,12 +10,16 @@
     window.OpenPopKa = true;
   </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../lib/odsaStyle-min.css"></script>
-  <script src="../../lib/ExAreaPROG.js"> </script>
-  <link rel= "stylesheet" href="../../lib/ExAreaPROG.css" type="text/css">
+  <script src="../../lib/odsaStyle-min.css"></script> 
+ 
+  <script src="../../lib/codemirror/lib/codemirror.js"></script>
+  <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
+  <script src="../../lib/codemirror/mode/clike/clike.js"></script>
+
+
   
 </head>
-<body  data-height="550" data-width="950">
+<body  data-height="650" data-width="950">
    
 <div class="exercise">
   <div class="vars">
@@ -31,7 +35,14 @@
         Given the following recursive function signature, write the function code such that this function modifies an array of Strings to remove duplicates. For example, if the list has the values {"recursion", "recursion", "is","is", "cool", "cool"} before the method is called, it should have the values {"recursion", "is", "cool"}. You may not create any new arrays.
  <br />
 </h4>
-
+<p></p>
+  <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    mode:  "text/x-java"
+  });
+  
+  </script>
 <textarea  id="codeTextarea"> void removeDuplicates(ArrayList<String> list, int counter)
 {
 
